# nl-pipeline-builder

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  pytest.ini
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: ci.yml
dags/: README.md  example_dag.py
src/nlpipeline/: cli.py  llm_agent.py  models.py  streamlit_app.py
src/nlpipeline/templates/: airflow_dag.j2
tests/: test_prompt_roundtrip.py
